--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "resort",
+  "name": "moutain-resort",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "contentful": "^7.13.1",
+    "animate.css": "^3.7.2",
+    "aos": "^3.0.0-beta.6",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-collapsible": "^2.6.2",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
